app/src/main/java/com/example/windows/data/models/errors/LoginRespons.kt
package com.example.windows.data.models.errors

data class LoginResponse(val token: String)